--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Harrison's Blog</a></span>
+                <script language="javascript">
+                <button onclick=function makeChange() {
+                        "background_color: #87e8d8";
+              </script>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
