--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Harrison Scott | 17 years old | Scholars Academy Student ">
   <script language="javascript">
         function myButton() {
-                  "background_color: #87e8d8";
+                  window.open = <a href='https://twitter.com/vudu_mama_juju'/a>
               }
   </script>
             
@@ -119,7 +119,7 @@
                 </div>
             </div>
         
-          <button onclick="javascript:myButton()">Click me</button>
+          <button onclick="javascript:myButton()">Visit my twitter</button>
         </div>
     </div>
 </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">Learn more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
