--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="description" content="Harrison Scott | 17 years old | Scholars Academy Student ">
   <script language="javascript">
         function myButton() {
-                  window.open = <a href='https://twitter.com/vudu_mama_juju'/a>
+                  window.open("https://twitter.com/vudu_mama_juju",
+                              " ", "width = 300, height = 300");
               }
   </script>
             
