--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
   <script language="javascript">
         function myButton() {
                   window.open("https://twitter.com/vudu_mama_juju",
-                              " ", "width = 300, height = 300");
+                              " ", "width = 1000, height = 1000");
               }
+        function styleChange() {
+                  if(document.body.style.backgroundColor = "#fff"){
+                      document.body.style.backgroundColor = "teal";
+                  else {
+                    document.body.style.backgroundColor = "#fff";
+        }
   </script>
             
   
@@ -121,6 +127,7 @@
             </div>
         
           <button onclick="javascript:myButton()">Visit my twitter</button>
+          <button onclick="javascript:styleChange()">Change Color!</button>
         </div>
     </div>
 </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">Learn more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
