--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         function styleChange() {
                   if(document.body.style.backgroundColor = "#fff"){
                       document.body.style.backgroundColor = "teal";
-                  else {
-                    document.body.style.backgroundColor = "#fff";
+                  } else {
+                      document.body.style.backgroundColor = "#fff";
+                  }
         }
   </script>
             
