--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Harrison Scott | 17 years old | Scholars Academy Student ">
+  <style> 
+          .changeColor {
+                background-color: teal;
+    }
+  </style>
   <script language="javascript">
         function myButton() {
                   window.open("https://twitter.com/vudu_mama_juju",
@@ -15,7 +20,7 @@
               }
         function styleChange() {
                   if(document.body.style.backgroundColor = "#fff"){
-                      document.body.style.backgroundColor = "teal";
+                      thingToChange.changeColor = "";
                   } else {
                       document.body.style.backgroundColor = "#fff";
                   }
