--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Harrison Scott | 17 years old | Scholars Academy Student ">
-  <style> 
-          .changeColor {
-                background-color: teal;
-    }
-          .undoChange {
-                background-color: '#fff';
-    }
   
   <title>About Me</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -27,7 +20,7 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  </style>
+  <link rel="myStyleSheet" as="myStyleSheet" href = "myStyleSheet.css">
   <script language="javascript">
         function myButton() {
                   window.open("https://twitter.com/vudu_mama_juju",
