--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="myStyleSheet" as="myStyleSheet" href="myStyleSheet.css">
   
-  
-  
-  
+  function myButton() {
+                   window.open("https://twitter.com/vudu_mama_juju",
+                               " ", "width = 1000, height = 1000");
+               }
+         function styleChange() {
+                   if(document.body.style.backgroundColor = "#fff"){
+                       document.body.className = "changeColor";
+                   } else {
+                       document.body.className = "undoChange";
+
 </head>
 <body>
   
