--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   <link rel="myStyleSheet" as="myStyleSheet" href="myStyleSheet.css">
-  
+ 
+<script language="javascript">
   function myButton() {
                    window.open("https://twitter.com/vudu_mama_juju",
                                " ", "width = 1000, height = 1000");
@@ -32,6 +33,8 @@
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
+                   }
+  </script>
 
 </head>
 <body>
