--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                    } else {
                        document.body.className = "undoChange";
                    }
-           </script>
+ </script>
 
 </head>
 <body>
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Harrison Scott</strong></h4>
-            
+          <button onclick="javascript:styleChange()">Change Color!</button>
         </div>
         <div class="row mt-4">
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
