--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                   if(document.body.style.backgroundColor = "#fff"){
+                   if(document.body.style.background-image = "../../../assets/images/background3.jpg"; {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
