--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                    window.open("https://twitter.com/vudu_mama_juju",
                                " ", "width = 1000, height = 1000");
                }
-  function styleChange() {
-                   if(document.body.style.background-image:"https://harrisonscotato.github.io/assets/images/background3.jpg"); 
+  function styleChange() 
+                      if {
+                   (document.body.style.background-image):"https://harrisonscotato.github.io/assets/images/background3.jpg"); 
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
