--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    window.open("https://twitter.com/vudu_mama_juju",
                                " ", "width = 1000, height = 1000");
                }
-  function styleChange() 
+  function styleChange() {
                       if {
                    (document.body.style.background-image):"https://harrisonscotato.github.io/assets/images/background3.jpg"); 
                        document.body.className = "changeColor";
