--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                      if (document.body.style.backgroundImage = "url('https://harrisonscotato.github.io/assets/images/background3.jpg')") {
+                      if (document.body.style.backgroundImage = "url('background.jpg')") {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
