--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                      if (div class="section" background-color = #ffffff) {
+                      if class="section" (background-color = #ffffff) {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
