--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                     if (document.body.section background-color = "") {
+                     if (document.body.section.background-color = "") {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
