--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                     if (document.body.section.background-color = "#fff") {
+                     if (document.body.background-color = "#fff") {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
