--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <script language="javascript">
+  function myButton() {
+                   window.open("https://twitter.com/vudu_mama_juju",
+                               " ", "width = 1000, height = 1000");
+               }
+  function styleChange() {
+                     if (document.body.style.background = "#fff") {
+                       document.body.className = "changeColor";
+                   } else {
+                       document.body.className = "undoChange";
+                   }
+  }
+ </script>
   
   
 </head>
@@ -71,6 +83,7 @@
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Harrison Scott</strong></h4>
             
+          <button onclick="javascript:styleChange()">Change Color!</button>
         </div>
         <div class="row mt-4">
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
