--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
   }
  </script>
   
-  
+  <style>
+    .changeColor {
+	background : teal;
+}
+.undoChange {
+	background : '#fff';
+}
+  </style>
+    
 </head>
 <body>
   
