--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                     if (document.body.style.background = "#fff") {
+                     if (document.body.style.backgroundColor = "#fff") {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
@@ -38,10 +38,10 @@
   
   <style>
     .changeColor {
-	background : teal;
+	backgroundColor : teal;
 }
 .undoChange {
-	background : '#fff';
+	backgroundColor : '#fff';
 }
   </style>
     
