--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                " ", "width = 1000, height = 1000");
                }
   function styleChange() {
-                     if (document.body.style.mbr-overlay background = "") {
+                     if (document.body.style.mbr-overlay.background = "") {
                        document.body.className = "changeColor";
                    } else {
                        document.body.className = "undoChange";
