--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   
   <style>
     .changeColor {
-	background-color : teal;
+	background : teal;
 }
 .undoChange {
-	background-color : white;
+	background : white;
 }
   </style>
     
