--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   
   <style>
     .changeColor {
-	background : teal;
+	document.body.style.background : teal;
 }
 .undoChange {
-	background : white;
+	document.body.style.background : white;
 }
   </style>
     
