--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
  </script>
   
   <style>
-    .changeColor {
-	document.body.style.background : teal;
+    .changeColor section{
+	background-color : teal;
 }
-.undoChange {
-	document.body.style.background : white;
+.undoChange section{
+	background-color : white;
 }
   </style>
     
