--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   function styleChange() {
                      if (document.body.style.background = '#fff') {
                        document.body.className = "changeColor";
-                   } else {
+                   } if (document.body.style.background = 'teal') {
                        document.body.className = "undoChange";
                    }
   }
