--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
   <style>
     .changeColor section{
-	background-color : teal;
+	background-color : salmon;
 }
 .undoChange section{
 	background-color : white;
